MDEV-24517 JSON_EXTRACT as select conditions triggers syntax errors on Spider

how to repeat:
CREATE TABLE t1(i INT PRIMARY KEY, j JSON)ENGINE=spider...
INSERT INTO t1 VALUES(1, '{"Name":"Tom", "Age":18}'), (2, '{"Name":"Jerry", "Age":20}');
SELECT * FROM t1 WHERE json_extract(jdoc, '$.Age')=20; -- ERROR 1064 (42000): You have an error in your SQL syntax;

how to solve:
process Item_func::JSON_EXTRACT_FUNC as Item_func::UNKNOWN_FUNC does